Fix alignment for pause e,ements

--- a/styles.css
+++ b/styles.css
@@ -318,6 +318,9 @@ header:before{
 	padding: 0 5px;
 	justify-content: space-between;
 }
+.step.step_pause:not(:nth-of-type(2)) .transition{
+	justify-content: right;
+}
 .step .start_value, .step .end_value{
 	font-size: 1.4em;
 	padding: 1px 3px;
